make header menu link color have more contrast, fixes: #9336
Reviewed-on: https://gerrit.instructure.com/12157
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/base/_#header.sass
+++ b/app/stylesheets/base/_#header.sass
@@ -223,14 +223,12 @@
     border-bottom: 1px solid lighten($borderColor, 22%)
     &:hover
       .name
-        color: darken($blue, 12%)
+        color: darken($link_color, 12%)
     a
       display: block
       line-height: 1.2
       padding: 4px 12px 8px
       text-decoration: none
-      color: $blue
-
 
 .menu-item-drop.menuCustomListEditing
   min-width: 589px
@@ -279,7 +277,7 @@
         background-position: -8px -41px
 
   .customListOpen
-    color: $blue
+    color: $link_color
     float: right
     font-size: 11px
 
